test/fail/io/write_to_read_file.lly
#[
IOError: File not open for writing.
Traceback:
    File "[builtin]", from file::write
    File "write_to_read_file.lly", from __main__ at line 9
]#

var f = file::open("io_test_file.txt", "r+")
f.write("123")
